--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ header.exercise-header {
 }
 
 .top-nav .back-button a:before {
-  content: '\2190';
+  content: "\2190";
 }
 
 .top-nav .back-button a:hover {
